[package]
name = "treed_gpu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.10"
digest = "0.10"
crossbeam-channel = "0.5"
log = "0.4"

[dev-dependencies]
log4rs = "1"
clap = { version = "4", features = ["derive"] }

[build-dependencies]
cc = "1"

[profile.release]
lto = true
codegen-units = 1