[package]
name = "treed_gpu"
version = "0.1.0"
authors = ["xutianyi <xutianyi1999@live.com>"]
edition = "2021"
description = "Build TreeD with GPU"
license = "Apache-2.0 license"
repository = "https://github.com/gh-efforts/treed_gpu"

[dependencies]
sha2 = "0.10"
digest = "0.10"
crossbeam-channel = "0.5"
log = "0.4"

[dev-dependencies]
log4rs = "1"
clap = { version = "4", features = ["derive"] }

[build-dependencies]
cc = "1"

[profile.release]
lto = true
codegen-units = 1